tried to add finance data

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -385,6 +385,475 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yfinance as yf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-02-02</th>\n",
+       "      <td>403.809998</td>\n",
+       "      <td>412.649994</td>\n",
+       "      <td>403.559998</td>\n",
+       "      <td>411.220001</td>\n",
+       "      <td>410.460968</td>\n",
+       "      <td>28245000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05</th>\n",
+       "      <td>409.899994</td>\n",
+       "      <td>411.160004</td>\n",
+       "      <td>403.989990</td>\n",
+       "      <td>405.649994</td>\n",
+       "      <td>404.901245</td>\n",
+       "      <td>25352300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-06</th>\n",
+       "      <td>405.880005</td>\n",
+       "      <td>407.970001</td>\n",
+       "      <td>402.910004</td>\n",
+       "      <td>405.489990</td>\n",
+       "      <td>404.741516</td>\n",
+       "      <td>18382600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-07</th>\n",
+       "      <td>407.440002</td>\n",
+       "      <td>414.299988</td>\n",
+       "      <td>407.399994</td>\n",
+       "      <td>414.049988</td>\n",
+       "      <td>413.285706</td>\n",
+       "      <td>22340500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-08</th>\n",
+       "      <td>414.049988</td>\n",
+       "      <td>415.559998</td>\n",
+       "      <td>412.529999</td>\n",
+       "      <td>414.109985</td>\n",
+       "      <td>413.345612</td>\n",
+       "      <td>21225300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-09</th>\n",
+       "      <td>415.250000</td>\n",
+       "      <td>420.820007</td>\n",
+       "      <td>415.089996</td>\n",
+       "      <td>420.549988</td>\n",
+       "      <td>419.773712</td>\n",
+       "      <td>22032800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-12</th>\n",
+       "      <td>420.559998</td>\n",
+       "      <td>420.739990</td>\n",
+       "      <td>414.750000</td>\n",
+       "      <td>415.260010</td>\n",
+       "      <td>414.493500</td>\n",
+       "      <td>21202900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-13</th>\n",
+       "      <td>404.940002</td>\n",
+       "      <td>410.070007</td>\n",
+       "      <td>403.390015</td>\n",
+       "      <td>406.320007</td>\n",
+       "      <td>405.570007</td>\n",
+       "      <td>27824900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-14</th>\n",
+       "      <td>408.070007</td>\n",
+       "      <td>409.839996</td>\n",
+       "      <td>404.570007</td>\n",
+       "      <td>409.489990</td>\n",
+       "      <td>409.489990</td>\n",
+       "      <td>20401200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-15</th>\n",
+       "      <td>408.140015</td>\n",
+       "      <td>409.130005</td>\n",
+       "      <td>404.290009</td>\n",
+       "      <td>406.559998</td>\n",
+       "      <td>406.559998</td>\n",
+       "      <td>21825500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-16</th>\n",
+       "      <td>407.959991</td>\n",
+       "      <td>408.290009</td>\n",
+       "      <td>403.440002</td>\n",
+       "      <td>404.059998</td>\n",
+       "      <td>404.059998</td>\n",
+       "      <td>22281100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-20</th>\n",
+       "      <td>403.239990</td>\n",
+       "      <td>404.489990</td>\n",
+       "      <td>398.010010</td>\n",
+       "      <td>402.790009</td>\n",
+       "      <td>402.790009</td>\n",
+       "      <td>24307900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-21</th>\n",
+       "      <td>400.170013</td>\n",
+       "      <td>402.290009</td>\n",
+       "      <td>397.220001</td>\n",
+       "      <td>402.179993</td>\n",
+       "      <td>402.179993</td>\n",
+       "      <td>18631100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-22</th>\n",
+       "      <td>410.190002</td>\n",
+       "      <td>412.829987</td>\n",
+       "      <td>408.570007</td>\n",
+       "      <td>411.649994</td>\n",
+       "      <td>411.649994</td>\n",
+       "      <td>27009900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-23</th>\n",
+       "      <td>415.670013</td>\n",
+       "      <td>415.859985</td>\n",
+       "      <td>408.970001</td>\n",
+       "      <td>410.339996</td>\n",
+       "      <td>410.339996</td>\n",
+       "      <td>16295900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-26</th>\n",
+       "      <td>411.459991</td>\n",
+       "      <td>412.160004</td>\n",
+       "      <td>407.359985</td>\n",
+       "      <td>407.540009</td>\n",
+       "      <td>407.540009</td>\n",
+       "      <td>16193500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-27</th>\n",
+       "      <td>407.989990</td>\n",
+       "      <td>408.320007</td>\n",
+       "      <td>403.850006</td>\n",
+       "      <td>407.480011</td>\n",
+       "      <td>407.480011</td>\n",
+       "      <td>14835800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-28</th>\n",
+       "      <td>408.179993</td>\n",
+       "      <td>409.299988</td>\n",
+       "      <td>405.320007</td>\n",
+       "      <td>407.720001</td>\n",
+       "      <td>407.720001</td>\n",
+       "      <td>13183100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-29</th>\n",
+       "      <td>408.640015</td>\n",
+       "      <td>414.200012</td>\n",
+       "      <td>405.920013</td>\n",
+       "      <td>413.640015</td>\n",
+       "      <td>413.640015</td>\n",
+       "      <td>31947300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-01</th>\n",
+       "      <td>411.269989</td>\n",
+       "      <td>415.869995</td>\n",
+       "      <td>410.880005</td>\n",
+       "      <td>415.500000</td>\n",
+       "      <td>415.500000</td>\n",
+       "      <td>17800300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Open        High         Low       Close   Adj Close  \\\n",
+       "Date                                                                     \n",
+       "2024-02-02  403.809998  412.649994  403.559998  411.220001  410.460968   \n",
+       "2024-02-05  409.899994  411.160004  403.989990  405.649994  404.901245   \n",
+       "2024-02-06  405.880005  407.970001  402.910004  405.489990  404.741516   \n",
+       "2024-02-07  407.440002  414.299988  407.399994  414.049988  413.285706   \n",
+       "2024-02-08  414.049988  415.559998  412.529999  414.109985  413.345612   \n",
+       "2024-02-09  415.250000  420.820007  415.089996  420.549988  419.773712   \n",
+       "2024-02-12  420.559998  420.739990  414.750000  415.260010  414.493500   \n",
+       "2024-02-13  404.940002  410.070007  403.390015  406.320007  405.570007   \n",
+       "2024-02-14  408.070007  409.839996  404.570007  409.489990  409.489990   \n",
+       "2024-02-15  408.140015  409.130005  404.290009  406.559998  406.559998   \n",
+       "2024-02-16  407.959991  408.290009  403.440002  404.059998  404.059998   \n",
+       "2024-02-20  403.239990  404.489990  398.010010  402.790009  402.790009   \n",
+       "2024-02-21  400.170013  402.290009  397.220001  402.179993  402.179993   \n",
+       "2024-02-22  410.190002  412.829987  408.570007  411.649994  411.649994   \n",
+       "2024-02-23  415.670013  415.859985  408.970001  410.339996  410.339996   \n",
+       "2024-02-26  411.459991  412.160004  407.359985  407.540009  407.540009   \n",
+       "2024-02-27  407.989990  408.320007  403.850006  407.480011  407.480011   \n",
+       "2024-02-28  408.179993  409.299988  405.320007  407.720001  407.720001   \n",
+       "2024-02-29  408.640015  414.200012  405.920013  413.640015  413.640015   \n",
+       "2024-03-01  411.269989  415.869995  410.880005  415.500000  415.500000   \n",
+       "\n",
+       "              Volume  \n",
+       "Date                  \n",
+       "2024-02-02  28245000  \n",
+       "2024-02-05  25352300  \n",
+       "2024-02-06  18382600  \n",
+       "2024-02-07  22340500  \n",
+       "2024-02-08  21225300  \n",
+       "2024-02-09  22032800  \n",
+       "2024-02-12  21202900  \n",
+       "2024-02-13  27824900  \n",
+       "2024-02-14  20401200  \n",
+       "2024-02-15  21825500  \n",
+       "2024-02-16  22281100  \n",
+       "2024-02-20  24307900  \n",
+       "2024-02-21  18631100  \n",
+       "2024-02-22  27009900  \n",
+       "2024-02-23  16295900  \n",
+       "2024-02-26  16193500  \n",
+       "2024-02-27  14835800  \n",
+       "2024-02-28  13183100  \n",
+       "2024-02-29  31947300  \n",
+       "2024-03-01  17800300  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = yf.download(\"MSFT\", period=\"1mo\")\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_to_finance_data(text):\n",
+    "    class Ticker_Finder(dspy.Signature):\n",
+    "        \"\"\"Given a tweet, derive a stock ticker from the tweet\"\"\"\n",
+    "\n",
+    "        tweet = dspy.InputField()\n",
+    "        ticker = dspy.OutputField(desc=\"Ticker such as 'AAPL' or 'GOOGL', or 'None' if no ticker found.\")\n",
+    "    tck = dspy.Predict(Ticker_Finder)\n",
+    "    answer = tck(tweet=text)\n",
+    "    data = yf.download(answer.ticker, period=\"1mo\")\n",
+    "    percent_today = (data[\"Close\"][-1] - data[\"Open\"][-1]) / data[\"Open\"][-1] * 100\n",
+    "    current_price = data[\"Close\"][-1]\n",
+    "    close_prices = data[\"Close\"].to_dict()\n",
+    "    close_prices = {timestamp.to_pydatetime().isoformat() + 'Z': price for timestamp, price in close_prices.items()}\n",
+    "    returnjson = {\n",
+    "        \"ticker\": answer.ticker,\n",
+    "        \"percent_today\": percent_today,\n",
+    "        \"current_price\": current_price,\n",
+    "        \"close_prices\": close_prices,\n",
+    "    }\n",
+    "    print(data)\n",
+    "    return returnjson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Open       High        Low      Close  Adj Close     Volume\n",
+      "Date                                                                        \n",
+      "2024-02-02  16.340000  17.020000  16.145000  17.020000  17.020000   56983900\n",
+      "2024-02-05  17.559999  17.870001  16.480000  16.719999  16.719999  167698300\n",
+      "2024-02-06  20.299999  22.180000  19.760000  21.870001  21.870001  420501900\n",
+      "2024-02-07  21.600000  23.870001  21.379999  23.600000  23.600000  254911100\n",
+      "2024-02-08  23.959999  25.059999  23.320000  24.510000  24.510000  212671100\n",
+      "2024-02-09  25.040001  25.110001  23.570000  24.379999  24.379999  149062000\n",
+      "2024-02-12  23.910000  25.525000  23.820000  25.049999  25.049999  108173000\n",
+      "2024-02-13  23.530001  24.660000  23.309999  24.010000  24.010000  102293300\n",
+      "2024-02-14  24.150000  25.500000  23.754999  25.190001  25.190001   97227900\n",
+      "2024-02-15  25.040001  25.459999  24.709999  25.410000  25.410000   70544300\n",
+      "2024-02-16  24.959999  25.495001  24.389999  24.440001  24.440001   65212100\n",
+      "2024-02-20  23.840000  24.000000  22.715000  23.400000  23.400000   93374300\n",
+      "2024-02-21  22.299999  22.930000  22.290001  22.740000  22.740000   60411500\n",
+      "2024-02-22  23.770000  23.950001  23.049999  23.590000  23.590000   64458200\n",
+      "2024-02-23  23.530001  24.070000  22.820000  22.969999  22.969999   48840800\n",
+      "2024-02-26  23.030001  23.879999  22.940001  23.559999  23.559999   46499500\n",
+      "2024-02-27  23.760000  24.620001  23.719999  24.530001  24.530001   64967400\n",
+      "2024-02-28  24.520000  24.840000  24.245001  24.420000  24.420000   47314000\n",
+      "2024-02-29  24.809999  25.292999  24.360001  25.080000  25.080000   62753300\n",
+      "2024-03-01  25.299999  25.690001  24.535000  24.930000  24.930000   63090500\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_10956\\321623453.py:10: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  percent_today = (data[\"Close\"][-1] - data[\"Open\"][-1]) / data[\"Open\"][-1] * 100\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_10956\\321623453.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  current_price = data[\"Close\"][-1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ticker': 'PLTR',\n",
+       " 'percent_today': -1.4624464151871397,\n",
+       " 'current_price': 24.93000030517578,\n",
+       " 'close_prices': {'2024-02-02T00:00:00Z': 17.020000457763672,\n",
+       "  '2024-02-05T00:00:00Z': 16.719999313354492,\n",
+       "  '2024-02-06T00:00:00Z': 21.8700008392334,\n",
+       "  '2024-02-07T00:00:00Z': 23.600000381469727,\n",
+       "  '2024-02-08T00:00:00Z': 24.510000228881836,\n",
+       "  '2024-02-09T00:00:00Z': 24.3799991607666,\n",
+       "  '2024-02-12T00:00:00Z': 25.049999237060547,\n",
+       "  '2024-02-13T00:00:00Z': 24.010000228881836,\n",
+       "  '2024-02-14T00:00:00Z': 25.190000534057617,\n",
+       "  '2024-02-15T00:00:00Z': 25.40999984741211,\n",
+       "  '2024-02-16T00:00:00Z': 24.440000534057617,\n",
+       "  '2024-02-20T00:00:00Z': 23.399999618530273,\n",
+       "  '2024-02-21T00:00:00Z': 22.739999771118164,\n",
+       "  '2024-02-22T00:00:00Z': 23.59000015258789,\n",
+       "  '2024-02-23T00:00:00Z': 22.969999313354492,\n",
+       "  '2024-02-26T00:00:00Z': 23.559999465942383,\n",
+       "  '2024-02-27T00:00:00Z': 24.530000686645508,\n",
+       "  '2024-02-28T00:00:00Z': 24.420000076293945,\n",
+       "  '2024-02-29T00:00:00Z': 25.079999923706055,\n",
+       "  '2024-03-01T00:00:00Z': 24.93000030517578}}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_to_finance_data(\"I think Palantir is going to have a great quarter!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06% 179.66000366210938 {'2024-02-02T00:00:00Z': 185.85000610351562, '2024-02-05T00:00:00Z': 187.67999267578125, '2024-02-06T00:00:00Z': 189.3000030517578, '2024-02-07T00:00:00Z': 189.41000366210938, '2024-02-08T00:00:00Z': 188.32000732421875, '2024-02-09T00:00:00Z': 188.85000610351562, '2024-02-12T00:00:00Z': 187.14999389648438, '2024-02-13T00:00:00Z': 185.0399932861328, '2024-02-14T00:00:00Z': 184.14999389648438, '2024-02-15T00:00:00Z': 183.86000061035156, '2024-02-16T00:00:00Z': 182.30999755859375, '2024-02-20T00:00:00Z': 181.55999755859375, '2024-02-21T00:00:00Z': 182.32000732421875, '2024-02-22T00:00:00Z': 184.3699951171875, '2024-02-23T00:00:00Z': 182.52000427246094, '2024-02-26T00:00:00Z': 181.16000366210938, '2024-02-27T00:00:00Z': 182.6300048828125, '2024-02-28T00:00:00Z': 181.4199981689453, '2024-02-29T00:00:00Z': 180.75, '2024-03-01T00:00:00Z': 179.66000366210938}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_10956\\864797364.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  percent_today = (data[\"Close\"][-1] - data[\"Open\"][-1]) / data[\"Open\"][-1] * 100\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_10956\\864797364.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  current_price = data[\"Close\"][-1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "percent_today = (data[\"Close\"][-1] - data[\"Open\"][-1]) / data[\"Open\"][-1] * 100\n",
+    "current_price = data[\"Close\"][-1]\n",
+    "close_prices = data[\"Close\"].to_dict()\n",
+    "close_prices = {timestamp.to_pydatetime().isoformat() + 'Z': price for timestamp, price in close_prices.items()}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
