--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -307,6 +307,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_to_finance_data(text):    \n",
+    "    # The URL you want to make a GET request to\n",
+    "    url = 'https://spc-openai-hackathon-backend.onrender.com'\n",
+    "    endpoint = '/text_to_finance_data'\n",
+    "    full_url = url + endpoint\n",
+    "\n",
+    "    # Assuming you have some variables to pass as query parameters\n",
+    "    query_params = {\n",
+    "        'text': text,\n",
+    "    }\n",
+    "\n",
+    "    # If you need to add headers\n",
+    "    headers = {\n",
+    "        'Accept': 'application/json'\n",
+    "    }\n",
+    "\n",
+    "    # Making the GET request with query parameters and headers\n",
+    "    response = requests.get(full_url, params=query_params, headers=headers)\n",
+    "\n",
+    "    # Checking if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Processing the response\n",
+    "        data = response.json()\n",
+    "        print(data)\n",
+    "        return data\n",
+    "    else:\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'close_prices': {'2024-02-02T00:00:00Z': 185.85000610351562, '2024-02-05T00:00:00Z': 187.67999267578125, '2024-02-06T00:00:00Z': 189.3000030517578, '2024-02-07T00:00:00Z': 189.41000366210938, '2024-02-08T00:00:00Z': 188.32000732421875, '2024-02-09T00:00:00Z': 188.85000610351562, '2024-02-12T00:00:00Z': 187.14999389648438, '2024-02-13T00:00:00Z': 185.0399932861328, '2024-02-14T00:00:00Z': 184.14999389648438, '2024-02-15T00:00:00Z': 183.86000061035156, '2024-02-16T00:00:00Z': 182.30999755859375, '2024-02-20T00:00:00Z': 181.55999755859375, '2024-02-21T00:00:00Z': 182.32000732421875, '2024-02-22T00:00:00Z': 184.3699951171875, '2024-02-23T00:00:00Z': 182.52000427246094, '2024-02-26T00:00:00Z': 181.16000366210938, '2024-02-27T00:00:00Z': 182.6300048828125, '2024-02-28T00:00:00Z': 181.4199981689453, '2024-02-29T00:00:00Z': 180.75, '2024-03-01T00:00:00Z': 179.66000366210938}, 'current_price': 179.66000366210938, 'percent_today': 0.06126461068332774, 'ticker': 'AAPL'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'close_prices': {'2024-02-02T00:00:00Z': 185.85000610351562,\n",
+       "  '2024-02-05T00:00:00Z': 187.67999267578125,\n",
+       "  '2024-02-06T00:00:00Z': 189.3000030517578,\n",
+       "  '2024-02-07T00:00:00Z': 189.41000366210938,\n",
+       "  '2024-02-08T00:00:00Z': 188.32000732421875,\n",
+       "  '2024-02-09T00:00:00Z': 188.85000610351562,\n",
+       "  '2024-02-12T00:00:00Z': 187.14999389648438,\n",
+       "  '2024-02-13T00:00:00Z': 185.0399932861328,\n",
+       "  '2024-02-14T00:00:00Z': 184.14999389648438,\n",
+       "  '2024-02-15T00:00:00Z': 183.86000061035156,\n",
+       "  '2024-02-16T00:00:00Z': 182.30999755859375,\n",
+       "  '2024-02-20T00:00:00Z': 181.55999755859375,\n",
+       "  '2024-02-21T00:00:00Z': 182.32000732421875,\n",
+       "  '2024-02-22T00:00:00Z': 184.3699951171875,\n",
+       "  '2024-02-23T00:00:00Z': 182.52000427246094,\n",
+       "  '2024-02-26T00:00:00Z': 181.16000366210938,\n",
+       "  '2024-02-27T00:00:00Z': 182.6300048828125,\n",
+       "  '2024-02-28T00:00:00Z': 181.4199981689453,\n",
+       "  '2024-02-29T00:00:00Z': 180.75,\n",
+       "  '2024-03-01T00:00:00Z': 179.66000366210938},\n",
+       " 'current_price': 179.66000366210938,\n",
+       " 'percent_today': 0.06126461068332774,\n",
+       " 'ticker': 'AAPL'}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_to_finance_data(\"I want to know the stock price of Apple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
