added icon to app

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "'pk.eyJ1IjoibmFrc2Nob3UiLCJhIjoiY2x0YWVsZDU0MTlwYzJxbXR3c2JwNTRxNyJ9.p-0xpRioL5JR_ZCipgTViA'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "'36e013a9aeb6f527aa6198bf346233fc'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,45 +256,40 @@
     "        \"humidity\": weather[\"main\"][\"humidity\"],\n",
     "        \"wind_speed\": weather[\"wind\"][\"speed\"],\n",
     "        \"wind_direction\": weather[\"wind\"][\"deg\"],\n",
+    "        \"icon\": weather[\"weather\"][0][\"icon\"],\n",
     "    }\n",
     "    return weather"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://api.openweathermap.org/data/2.5/weather?lat=47.0725146587006&lon=-109.172599073804&appid=36e013a9aeb6f527aa6198bf346233fc&units=imperial\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -109.1726, 'lat': 47.0725},\n",
-       " 'weather': [{'id': 804,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'overcast clouds',\n",
-       "   'icon': '04d'}],\n",
+       " 'weather': [{'id': 601,\n",
+       "   'main': 'Snow',\n",
+       "   'description': 'snow',\n",
+       "   'icon': '13d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 40.48,\n",
-       "  'feels_like': 32.16,\n",
-       "  'temp_min': 35.49,\n",
-       "  'temp_max': 40.57,\n",
-       "  'pressure': 992,\n",
-       "  'humidity': 68,\n",
-       "  'sea_level': 992,\n",
-       "  'grnd_level': 846},\n",
-       " 'visibility': 10000,\n",
-       " 'wind': {'speed': 15.99, 'deg': 178, 'gust': 25.14},\n",
+       " 'main': {'temp': 22.32,\n",
+       "  'feels_like': 16.95,\n",
+       "  'temp_min': 22.32,\n",
+       "  'temp_max': 30.09,\n",
+       "  'pressure': 993,\n",
+       "  'humidity': 81,\n",
+       "  'sea_level': 993,\n",
+       "  'grnd_level': 845},\n",
+       " 'visibility': 4871,\n",
+       " 'wind': {'speed': 3.96, 'deg': 315, 'gust': 11.01},\n",
+       " 'snow': {'1h': 1.23},\n",
        " 'clouds': {'all': 100},\n",
-       " 'dt': 1709406212,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2002035,\n",
+       " 'dt': 1709424521,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 4796,\n",
        "  'country': 'US',\n",
        "  'sunrise': 1709387635,\n",
        "  'sunset': 1709427829},\n",
@@ -304,7 +299,7 @@
        " 'cod': 200}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -362,10 +357,11 @@
        " 'feels_like': 32.16,\n",
        " 'humidity': 68,\n",
        " 'wind_speed': 15.99,\n",
-       " 'wind_direction': 178}"
+       " 'wind_direction': 178,\n",
+       " 'icon': '04d'}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,6 +375,7 @@
     "    \"humidity\": weather[\"main\"][\"humidity\"],\n",
     "    \"wind_speed\": weather[\"wind\"][\"speed\"],\n",
     "    \"wind_direction\": weather[\"wind\"][\"deg\"],\n",
+    "    \"icon\": weather[\"weather\"][0][\"icon\"],\n",
     "}\n",
     "returnjson"
    ]
