--- a/func_testing_dhruv.ipynb
+++ b/func_testing_dhruv.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,17 +119,44 @@
     "        data=json.dumps({\n",
     "            \"model\": \"perplexity/sonar-small-chat\", # Optional\n",
     "            \"messages\": [\n",
-    "            {\"role\": \"user\", \"content\": \"Give me the top three links to current news articles related to this tweet: \" + text \\\n",
-    "                + \"Make sure to format the output so that there is a list of dictionaries, with each dictionaries containing a title and a link to the article.\" \\\n",
-    "                    + \"the output should be in json format\"}\n",
+    "            {\"role\": \"user\", \"content\": \"Give me the top three links to current news articles in a numbered list related to this tweet: \" + text \\\n",
+    "                + \"make sure to included the title  followed by a colon and then the link to the article\"}\n",
     "            ]\n",
     "        })\n",
     "    )\n",
     "    data = json.loads(response.text)\n",
     "    message_content = data['choices'][0]['message']['content']\n",
     "\n",
+    "    def get_title_link(input_text):\n",
+    "        class get_title(dspy.Signature):\n",
+    "            \"\"\"Given a string with a title in it, give me just the title as a string\"\"\"\n",
+    "            text = dspy.InputField()\n",
+    "            title = dspy.OutputField(desc=\"title of article\")\n",
+    "        title = dspy.Predict(get_title)\n",
+    "        title_out = title(text=input_text).toDict()['title']\n",
     "\n",
-    "    \n",
+    "        class get_link(dspy.Signature):\n",
+    "            \"\"\"Given a string with a link in it, give me just the link as a string\"\"\"\n",
+    "            text = dspy.InputField()\n",
+    "            link = dspy.OutputField(desc=\"link to article\")\n",
+    "        link = dspy.Predict(get_link)\n",
+    "        link_out = link(text=input_text).toDict()['link']\n",
+    "\n",
+    "        return {\"title\": title_out, \"link\": link_out}\n",
+    "\n",
+    "    class format_output(dspy.Signature):\n",
+    "        \"\"\"Given a string of articles, give me the title and link of each article\"\"\"\n",
+    "        text = dspy.InputField()\n",
+    "        formatted = dspy.OutputField(desc=\"title of article and link to article\")\n",
+    "    formatted = dspy.Predict(format_output)\n",
+    "    answer = formatted(text=message_content)\n",
+    "    answer = answer.toDict()['formatted']\n",
+    "    lines = answer.split('\\n')\n",
+    "\n",
+    "    articles = []\n",
+    "\n",
+    "    for line in lines:\n",
+    "        articles.append(get_title_link(line))\n",
     "\n",
     "    class classify_party(dspy.Signature):\n",
     "        \"\"\"Given tweet text, classify the political party of the author\"\"\"\n",
@@ -139,19 +166,19 @@
     "    party = party_output(text=text).toDict()['party']\n",
     "    \n",
     "    \n",
-    "    return {\"party\": party, \"articles\": message_content}"
+    "    return {\"party\": party, \"articles\": articles}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'party': 'Left', 'articles': '{\\n  \"articles\": [{\\n    \"title\": \"How Different Accounts of the Riots in Washington D.C. Paint a Daunting Picture of America\",\\n    \"link\": \"https://www.theatlantic.com/magazine/archive/2021/02/how-different-accounts-of-the-riots-in-washington-d-c-paint-a-daunting-picture-of-america/618133/\"\\n  }, {\\n    \"title\": \"U.S. House Science Committee Chairman Holds Hearing on Assault on U.S. Capitol\",\\n    \"link\": \"https://science.house.gov/latest-news/husc-chairman-holds-field-hearing-assault-on-u-s-capitol\"\\n  }, {\\n    \"title\": \"Giuliani,, Trump\\'s Attempts to Overturn Vote Are Rejected by 300\",\\n    \"link\": \"https://twitter.com/realDonaldTrump/status/1355416824902403073\"\\n  }]\\n}'}\n"
+      "{'party': 'Left', 'articles': [{'title': 'In Memory of January 6: Never Again Disregard Democracy', 'link': 'https://www.cnn.com/2021/01/06/politics/january-6-year-in-review-police-officers/'}, {'title': 'One Year Later, America Is Still Dealing with the Trauma of the January 6 Capitol Insurrection', 'link': 'http://www3.nytimes.com/2021/01/06/us/politics/one-year-later-capitol-insurrection.html'}, {'title': 'One Year Later, the January 6 Attack on the Capitol Boosts Demand for Gun Control', 'link': 'http://www4.it.com/politics/2021/01/06/one-year-later-the-january-6-'}]}\n"
      ]
     }
    ],
@@ -171,63 +198,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Left'"
+       "[\"1. Title: Donald Trump's Middle Eastern Improvements, Link: https://www.cnn.com/2021/01/15/politics/trump-middle-east-policy\",\n",
+       " '2. Title: After Capitol Riot, Republican Party Contends with Post-Trump Fragile Unity, Link: https://www.washingtonpost.com/politics/republican-party-fragile-unity-after-capitol-riot/2020/12/23/db703c5c-a6f9-11eb-82d5-0035628ccf41_story.html',\n",
+       " '3. Title: January 6th Attack on the Capitol, Link: https://www.npr.org/2021/01/16/957234700/january-6-']"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "text = \"\"\"\n",
-    "Here are the top three links to current news articles related to the tweet: \n",
-    "\n",
-    "```json\n",
-    "[{\n",
-    "    \"title\": \"U.S. Capitol Riots: One Year Later, Reliving That Dark Day for America\",\n",
-    "    \"link\": \"https://www.npr.org/2022/01/06/1054647356/us-capitol-riots-one-year-later-reliving-that-dark-day-for-america\"\n",
-    "}, {\n",
-    "    \"title\": \"One Year Later, A Look Into The Unforeseen Consequences Of January 6th\",\n",
-    "    \"link\": \"https://www.forbes.com/sites/madelinebergman/2022/01/06/one-year-later-a-look-into-the-unforeseen-consequences-of-january-6th/?sh=7f50fa5b7b54\"\n",
-    "}, {\n",
-    "    \"title\": \"Bidenamazonaws.com\",\n",
-    "    \"link\": \"https://www.presidency.ucsb.edu/node/349507\"\n",
-    "}]\n",
-    "```\n",
+    "1. **Donald Trump\\'s Middle Eastern Improvements**: \"https://www.cnn.com/2021/01/15/politics/trump-middle-east-policy\" :)\\n2. **After Capitol Riot, Republican Party Contends with Post-Trump Fragile Unity**: \"https://www.washingtonpost.com/politics/republican-party-fragile-unity-after-capitol-riot/2020/12/23/db703c5c-a6f9-11eb-82d5-0035628ccf41_story.html\" :)\\n3. **January 6th Attack on the Capitol**: \"https://www.npr.org/2021/01/16/957234700/january-6-attack-on-the-capitol-the-aftermath\" :)\n",
     "\"\"\"\n",
     "class format_output(dspy.Signature):\n",
-    "    \"\"\"Given a string representation of a json object, remove the top key and just return a list of json objects.\"\"\"\n",
+    "    \"\"\"Given a string of articles, give me the title and link of each article\"\"\"\n",
     "    text = dspy.InputField()\n",
-    "    party = dspy.OutputField(desc=\"list of json objects\")\n",
-    "party = dspy.Predict(format_output)\n",
-    "answer = party(text=text)\n",
-    "answer = answer.toDict()['party']\n",
-    "obj = json.dumps(answer)\n",
-    "obj\n",
+    "    formatted = dspy.OutputField(desc=\"title of article and link to article\")\n",
+    "formatted = dspy.Predict(format_output)\n",
+    "answer = formatted(text=text)\n",
+    "answer = answer.toDict()['formatted']\n",
+    "lines = answer.split('\\n')\n",
     "\n",
-    "class classify_party(dspy.Signature):\n",
-    "    \"\"\"Given tweet text, classify the political party of the author\"\"\"\n",
-    "    text = dspy.InputField()\n",
-    "    party = dspy.OutputField(desc=\"Right, Left, or Center\")\n",
-    "party = dspy.Predict(classify_party)\n",
-    "answer = party(text=\"January 6th was a dark day for America. We must never forget the insurrection.\")\n",
-    "answer.toDict()['party']\n",
+    "\n",
+    "# class classify_party(dspy.Signature):\n",
+    "#     \"\"\"Given tweet text, classify the political party of the author\"\"\"\n",
+    "#     text = dspy.InputField()\n",
+    "#     party = dspy.OutputField(desc=\"Right, Left, or Center\")\n",
+    "# party = dspy.Predict(classify_party)\n",
+    "# answer = party(text=\"January 6th was a dark day for America. We must never forget the insurrection.\")\n",
+    "# answer.toDict()['party']\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': \"Donald Trump's Middle Eastern Improvements\",\n",
+       " 'link': 'https://www.cnn.com/2021/01/15/politics/trump-middle-east-policy'}"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_title_link(input_text):\n",
+    "    class get_title(dspy.Signature):\n",
+    "        \"\"\"Given a string with a title in it, give me just the title as a string\"\"\"\n",
+    "        text = dspy.InputField()\n",
+    "        title = dspy.OutputField(desc=\"title of article\")\n",
+    "    title = dspy.Predict(get_title)\n",
+    "    title_out = title(text=input_text).toDict()['title']\n",
+    "\n",
+    "    class get_link(dspy.Signature):\n",
+    "        \"\"\"Given a string with a link in it, give me just the link as a string\"\"\"\n",
+    "        text = dspy.InputField()\n",
+    "        link = dspy.OutputField(desc=\"link to article\")\n",
+    "    link = dspy.Predict(get_link)\n",
+    "    link_out = link(text=input_text).toDict()['link']\n",
+    "\n",
+    "    return {\"title\": title_out, \"link\": link_out}\n",
+    "\n",
+    "get_title_link(lines[0])"
+   ]
   },
   {
    "cell_type": "code",
